feat: Add prediction history storage and GitHub Actions deployment
- Add localStorage-based history storage (max 20 results)
- Add HistoryPanel component to view saved predictions
- Add export functionality to download JSON files
- Add GitHub Actions workflow for automatic deployment
- Update UI to show save status and history count
- Add translations for history features

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         background: #4b5563; 
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -66,6 +66,14 @@
 </script>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div style="color: white; padding: 20px; text-align: center; font-family: monospace; background: #030712; min-height: 100vh; display: flex; align-items: center; justify-content: center;">
+        <div>
+          <h1 style="font-size: 24px; margin-bottom: 10px;">BitQuant</h1>
+          <p>Loading application...</p>
+        </div>
+      </div>
+    </div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
